--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -1,48 +1,42 @@
-<h2>Sign up</h2>
+<div class="login">
+  <h1>Sign up</h1>
+  <%= form_for(resource, as: resource_name, html: { multipart: true }, url: registration_path(resource_name)) do |f| %>
+    <div class='mt-10p'>
+      <div class='form-group'>
+        <%= f.text_field :name, class: 'form-control', placeholder: 'Name', required: true %>
+      </div>
 
-<%= form_for(resource, as: resource_name, html: { multipart: true }, url: registration_path(resource_name)) do |f| %>
-  <%= render "devise/shared/error_messages", resource: resource %>
+      <div class='form-group'>
+        <%= f.email_field :email, class: 'form-control', placeholder: 'Email Address', required: true, pattern: ".{1,40}[@]{1}[a-zA-Z0-9-]{1,30}[.]{1}[a-z0-9._%+-]{2,20}" %>
+      </div>
 
-  <div class="field">
-    <%= f.label :name %><br />
-    <%= f.text_field :name, autofocus: true %>
-  </div>
+      <div class='form-group'>
+        <%= f.text_field :address, class: 'form-control', placeholder: 'Address', required: true %>
+      </div>
 
-  <div class="field">
-    <%= f.label :email %><br />
-    <%= f.email_field :email, autocomplete: "email" %>
-  </div>
+      <div class='form-group'>
+        <%= f.telephone_field :phone_number, class: 'form-control', placeholder: 'Phone Number', required: true, minlength: 9, maxlength: 12 %>
+      </div>
 
-  <div class="field">
-    <%= f.label :address %><br />
-    <%= f.text_field :address %>
-  </div>
-    <div class="field">
-    <%= f.label :phone_number %><br />
-    <%= f.text_field :phone_number %>
-  </div>
-  </div>
-    <div class="field">
-    <%= f.label :profile_picture %><br />
-    <%= f.file_field :profile_picture %>
-  </div>
+      <div class='form-group'>
+        <%= f.file_field :profile_picture, class: 'form-control', placeholder: 'Profile Picture', required: true %>
+      </div>
 
-  <div class="field">
-    <%= f.label :password %>
-    <% if @minimum_password_length %>
-    <em>(<%= @minimum_password_length %> characters minimum)</em>
-    <% end %><br />
-    <%= f.password_field :password, autocomplete: "new-password" %>
-  </div>
+      <div class='form-group'>
+        <%= f.password_field :password, class: 'form-control', placeholder: 'Password', required: true %>
+      </div>
 
-  <div class="field">
-    <%= f.label :password_confirmation %><br />
-    <%= f.password_field :password_confirmation, autocomplete: "new-password" %>
-  </div>
+      <div class='form-group'>
+        <%= f.password_field :password_confirmation, class: 'form-control', placeholder: 'Re-enter Password', required: true %>
+        <small>
+          <a href='/users/sign_in' class='devise-link'>Sign in</a>
+          <a href='/users/password/new' class='devise-link float-right'>Forgot password?</a>
+        </small>
+      </div>
+    </div>
 
-  <div class="actions">
-    <%= f.submit "Sign up" %>
-  </div>
-<% end %>
-
-<%= render "devise/shared/links" %>
+    <div class='text-center'>
+      <button type='submit' class="btn btn-primary btn-block btn-large"><span style='color: #FFFFFF'>Sign Up</span></button>
+    </div>
+  <% end %>
+</div>
