--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -12,6 +12,7 @@
   <body>
     <%= render 'layouts/flash' if flash.present? %>
     <% if user_signed_in? %>
+      <%= render 'layouts/navbar' %>
       <div class='container' style='background: white; height: 100%;'>
     <% else %>
       <div class='container'>
