--- a/app/views/users/_form.html.erb
+++ b/app/views/users/_form.html.erb
@@ -20,7 +20,7 @@
 
       <div class='form-group row'>
         <%= f.label 'Address', class: 'col-sm-2' %>
-        <%= f.text_field :address, class: 'form-control col-sm-8', placeholder: 'Address', required: true, readonly: readonly %>
+        <%= f.text_field :address, class: 'form-control col-sm-8', placeholder: 'Address', required: true %>
       </div>
 
       <div class='form-group row'>
@@ -30,7 +30,7 @@
 
       <div class='form-group row'>
         <%= f.label 'Profile Picture', class: 'col-sm-2' %>
-        <%= f.file_field :profile_picture, class: 'form-control col-sm-8', placeholder: 'Profile Picture', readonly: readonly %>
+        <%= f.file_field :profile_picture, class: 'form-control col-sm-8', placeholder: 'Profile Picture', required: true %>
       </div>
 
       <div class='form-group row'>
