Creating New User by Admin Added

--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -2,8 +2,11 @@
   <div class='col-12'>
     <div class='card'>
       <div class='card-body'>
+        <span id='create-user'>
+          <%= link_to 'New User', new_home_path, class: 'btn btn-danger' %>
+        </span>
         <div class='table-responsive'>
-          <table id='user-list' class='table table-striped custom-table' data-source="<%= users_path(format: :json) %>">
+          <table id='user-list' class='table table-striped custom-table' data-source="<%= home_index_path(format: :json) %>">
             <thead>
               <tr>
                 <th>Name</th>
